# Memu8086

./: .gitignore  CMakeLists.cmake  CMakeLists.txt  CMakePresets.json  README.md  build-windows.yml  code_documentation.md  compile_commands.json  imgui.ini  repro_eval  repro_eval.cpp  vcpkg.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
.qt/: QtDeploySupport.cmake
src/: main.cpp  resources.qrc  wasm_api.cpp
src/assembler/: assembler.cpp  assembler.h
src/assets/styles/: dark.qss  light.qss
src/core/: cpu.cpp  cpu.h  cpu_exec.cpp  cpu_exec.h  debugger.cpp  debugger.h  disassembler.cpp  disassembler.h  emulator.cpp  emulator.h  interrupts.cpp  interrupts.h
src/ui/: console_panel_widget.cpp  console_panel_widget.h  custom_dock.cpp  custom_dock.h  editor_panel.cpp  editor_panel.h  examples_dialog.cpp  examples_dialog.h  highlighter.cpp  highlighter.h  mainwindow.cpp  mainwindow.h  memory_panel.cpp  memory_panel.h  registers_panel.cpp  registers_panel.h  settings_dialog.cpp  settings_dialog.h  stack_panel.cpp  stack_panel.h  test_main.cpp  theme.cpp  theme.h  toolbar.cpp  toolbar.h  variables_panel.cpp  variables_panel.h
testing/: CMakeLists.txt
testing/src/: main.cpp  test_runner.cpp  test_runner.h
testing/test_suite/: hello.asm  test_aam_base.asm  test_add.asm  test_address_wrap_16bit.asm  test_addressing_stress.asm  test_bcd_complex.asm  test_bcd_daa.asm  test_bubble_sort.asm  test_bug_var_size.asm  test_cmpsb.asm  test_control_flow.asm  test_daa_edge.asm  test_div_by_zero.asm  test_div_overflow.asm  test_div_overflow_int.asm  test_endianness.asm  test_fibonacci_recursive.asm  test_flags.asm  test_flags_boundary.asm  test_flags_overflow.asm  test_forward_ref_shrink.asm  test_idiv.asm  test_idiv_overflow.asm  test_implicit_div.asm  test_imul.asm  test_imul_boundary.asm  test_int0_redirect.asm  test_ip_wrap.asm  test_jmp_boundary.asm  test_logic.asm  test_loop_zero.asm  test_mem.asm  test_mem2mem.asm  test_model_order.asm  test_model_tiny.asm  test_modrm_encoding.asm  test_mul_flags.asm  test_obfuscated_jmp.asm  test_parser_edge_cases.asm  test_physical_wrap.asm  (+26 more)
themes/: default_theme.json
vscode-ext/: .gitignore  DAP_MIGRATION_PLAN.md  README.md  language-configuration.json  package-lock.json  package.json  test.js  tsconfig.json
vscode-ext/src/: debugAdapter.ts  extension.ts
vscode-ext/syntaxes/: asm.tmLanguage.json
vscode-ext/wasm/: CMakeLists.txt
vscode-extension/: .gitignore
